Wrapping up with minor accessibility fixes, primarily h1, h2 succession

--- a/main.css
+++ b/main.css
@@ -33,9 +33,16 @@
     background-color: #f5bd31;
 }
 
-h1 {
-    margin: 10px;
+  .site-header h2 {
+        font-size: 16px;
+        font-weight: normal;
+        margin: 10px 0px;
 }
+
+h1 {
+    margin: 10px 0px;
+}
+
 
 p {
     margin: 10px 0px;
